minor changes to screen

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <div class="calculator-container">
             <div class="calculator">
                 <div class="screen">
+                    <div class="screen-text">
+                        <p class="number-display">
+                            45555
+                        </p>
+
+                    </div>
 
                 </div>
                 <div class = "buttons">
