added click functionality to numbers

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="calculator">
                 <div class="screen">
                     <div class="screen-text">
-                        <p class="number-display">
+                        <p class="number-display" id="number-display">
                             45555
                         </p>
 
